# PANEL

./: .replit  api_gemini.py  app.py  file_manager.py  github_integration.py  main.py  pyproject.toml  replit.md  templates.py  utils.py  validator.py  web_server.py
attached_assets/: Pasted-Crea-un-proyecto-profesional-de-Python-que-funcione-completamente-desde-la-terminal-Termux-para-ed-1758741078300_1758741078304.txt
logs/: action_history.json
templates/: index.html  replit_style.html
