[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "google-genai>=1.38.0",
    "gunicorn>=23.0.0",
    "pathlib>=1.0.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "sift-stack-py>=0.9.1",
    "psycopg2-binary>=2.9.10",
]
